--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,27 @@
-.vscode.com/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+.vscode
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+.parcel-cache
+dist
+.prettierrc
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.env
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
